--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.trains {
+    display: flex;
+    flex-direction: column;
+}
+.trains-list {
+    flex: 1 1 auto;
+}
+.trains-name {
+    text-align: start;
+}
