Show estimated time when train is late Show destination station if we care

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,10 @@
     text-align: start;
     padding: 5px;
 }
+.oldTime {
+    color: red;
+    font-style: italic;
+}
+.estTime {
+    min-height: 1em;
+}
