Filter on to station test Show real time when train has left

--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,12 @@
     text-align: start;
     padding: 5px;
 }
-.oldTime {
-    color: red;
-    font-style: italic;
-}
 .estTime {
+    color: red;
+}
+.oldTime {
+    text-decoration: line-through;
+}
+.realTime {
     min-height: 1em;
 }
